Fix: letter spacing

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -244,6 +244,7 @@ p {
     justify-content: space-around;
     border-bottom: 1px solid $color-white;
     padding-bottom: 12px;
+    letter-spacing: 1px;
 }
 
 ul {
